--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: python
 python:
-  - "2.7"
+- '2.7'
 env:
-  - DJANGO=1.6.6
+- DJANGO=1.6.6
 install:
-  - pip install -q Django==$DJANGO --use-mirrors
+- pip install -q Django==$DJANGO --use-mirrors
 script:
-  - python manage.py test
+- python manage.py test
+deploy:
+  provider: heroku
+  api_key:
+    secure: CqBuRugNu/8SJuxso69xBHG3/eMCd3HqQ3SOPOZACpYfegX1P/7EeVnEXPWBBT/7JeucC2HCe0PKiZDOHie1Y1D3nXBvIiktITdyy35ruPa908YSDu1YOXhdUiZlFuLSGQdTL5L1Xi9dNQfxzkaIxkOmZYZI1dVFBGwlTDfZyjE=
+  app: django_travis_chef-solo
+  on:
+    repo: sharma-mohit/django_travis_chef-solo
